--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -15,4 +15,10 @@ html {
 
 body {
   font-family: 'Roboto', sans-serif;
+  background-color: #f1f3f5;
 }
+
+// Color Variables
+$color-primary-pink: #e64980;
+$color-dark-gray: #495057;
+$color-white: #fff;
