--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -16,9 +16,19 @@ html {
 body {
   font-family: 'Roboto', sans-serif;
   background-color: #f1f3f5;
+  line-height: 1;
 }
 
 // Color Variables
 $color-primary-pink: #e64980;
 $color-dark-gray: #495057;
+$color-light-gray: #b3b3b3;
+
 $color-white: #fff;
+$color-black: #222;
+
+// Font Variables
+$font-light: 300;
+$font-regular: 400;
+$font-medium: 500;
+$font-bold: 700;
