--- a/client/src/components/FormElements/ImageUpload/ImageUpload.scss
+++ b/client/src/components/FormElements/ImageUpload/ImageUpload.scss
@@ -30,8 +30,8 @@
   }
 
   &__btn {
-    padding: 0.7rem 2rem;
-    font-weight: $font-bold;
+    padding: 0.8rem 2rem;
+    font-weight: $font-medium;
     font-size: 1.4rem;
   }
 }
