--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
 
 *,
 *::after,
@@ -14,7 +14,7 @@ html {
 }
 
 body {
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Poppins', sans-serif;
   background-color: #f1f3f5;
   line-height: 1;
 }
@@ -22,7 +22,7 @@ body {
 // Color Variables
 $color-primary-pink: #e64980;
 $color-dark-gray: #495057;
-$color-light-gray: #b3b3b3;
+$color-light-gray: #ced4da;
 
 $color-white: #fff;
 $color-black: #222;
@@ -31,4 +31,8 @@ $color-black: #222;
 $font-light: 300;
 $font-regular: 400;
 $font-medium: 500;
+$font-semibold: 600;
 $font-bold: 700;
+
+// Other Variables
+$border-radius-5px: 5px;
