implemented rest of the inputs validations and functionality

--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -23,6 +23,10 @@ body {
 $color-primary-pink: #e64980;
 $color-dark-gray: #495057;
 $color-light-gray: #ced4da;
+$color-light-extra-gray: #f1f3f5;
+
+$color-red-danger: #fa5252;
+$color-red-light: #ffe3e3;
 
 $color-white: #fff;
 $color-black: #222;
