--- a/client/src/components/FormElements/Input/Input.scss
+++ b/client/src/components/FormElements/Input/Input.scss
@@ -4,12 +4,20 @@
   &__box {
     display: flex;
     flex-direction: column;
-    gap: 1.2rem;
+    gap: 0.7rem;
+    position: relative;
   }
 
   &__label {
     font-size: 1.2rem;
     font-weight: $font-medium;
+  }
+
+  &__required {
+    color: $color-red-danger;
+    position: absolute;
+    margin-left: 0.1rem;
+    margin-top: -0.1rem;
   }
 
   &__box input {
@@ -22,17 +30,31 @@
 
   &__box input:focus {
     outline: none;
-    // border-color: #240370;
-    // background-color: #e0d4fd;
+
+    border-color: $color-dark-gray;
+    background-color: $color-light-extra-gray;
   }
 
   &__box--invalid input {
-    border: 1px solid #b40e0e;
-    background-color: #fddddd;
+    border: 1px solid $color-red-danger;
+    background-color: $color-red-light;
   }
 
   &__box--invalid input:focus {
-    border-color: #ff8800;
-    background-color: #fbe8d2;
+    border-color: #f783ac;
+    background-color: #ffdeeb;
+  }
+
+  &__error--icon {
+    margin-right: 0.4rem;
+    font-size: 0.95rem;
+  }
+
+  &__error--msg {
+    position: absolute;
+    bottom: -1.6rem;
+    color: #e03131;
+    font-size: 1rem;
+    font-weight: $font-medium;
   }
 }
