--- a/client/src/components/Header/Header.scss
+++ b/client/src/components/Header/Header.scss
@@ -4,7 +4,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: $color-dark-gray;
+  background-color: $color-gray-dark;
   padding: 2rem 8rem 2rem 2rem;
 
   &__logo {
