--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -20,12 +20,17 @@ body {
 }
 
 // Color Variables
-$color-primary-pink: #e64980;
-$color-dark-gray: #495057;
-$color-light-gray: #ced4da;
-$color-light-extra-gray: #f1f3f5;
+$color-pink-primary: #e64980;
+$color-pink-light: #f783ac;
+$color-pink-light-extra: #ffdeeb;
 
-$color-red-danger: #fa5252;
+$color-gray-dark: #495057;
+$color-gray-dark-2: #adb5bd;
+$color-gray-light: #ced4da;
+$color-gray-light-extra: #f1f3f5;
+
+$color-red-deep: #e03131;
+$color-red-medium: #fa5252;
 $color-red-light: #ffe3e3;
 
 $color-white: #fff;
