--- a/client/src/components/FormElements/ImageUpload/ImageUpload.scss
+++ b/client/src/components/FormElements/ImageUpload/ImageUpload.scss
@@ -9,7 +9,7 @@
   }
 
   &__preview {
-    background-color: $color-light-gray;
+    background-color: $color-gray-light;
     width: 15rem;
     height: 15rem;
     border-radius: 5px;
