--- a/client/src/utils/Button/Button.scss
+++ b/client/src/utils/Button/Button.scss
@@ -4,7 +4,7 @@
   padding: 1rem 1.6rem;
   font-size: 1.5rem;
   border: none;
-  background-color: $color-primary-pink;
+  background-color: $color-pink-primary;
   color: $color-white;
   font-weight: $font-bold;
   border-radius: 5px;
