--- a/client/src/components/Contacts/ContactItem/ContactItem.scss
+++ b/client/src/components/Contacts/ContactItem/ContactItem.scss
@@ -3,8 +3,9 @@
 .contact-item {
   &__container--main {
     background-color: $color-white;
-    padding: 1rem 1rem 2rem 4.8rem;
+    padding: 1rem 1rem 2rem 3.2rem;
     border-radius: $border-radius-5px;
+    box-shadow: $box-shadow-1;
   }
 
   &__header {
@@ -22,11 +23,23 @@
     display: grid;
   }
 
-  &__name {
-    font-size: 2.2rem;
-    font-weight: $font-medium;
-    color: $color-pink-primary;
+  &__name-avatar--holder {
+    display: flex;
+    align-items: center;
+    gap: 0.8rem;
     margin-bottom: 1.2rem;
+  }
+
+  &__avatar {
+    width: 3.5rem;
+    height: 3.5rem;
+    border-radius: 50%;
+  }
+
+  &__name {
+    font-size: 2.3rem;
+    font-weight: $font-semibold;
+    color: $color-pink-primary;
   }
 
   &__content--holder {
@@ -55,7 +68,7 @@
 
   &__fa-icon--phone,
   &__fa-icon--email {
-    font-size: 1.2rem;
+    font-size: 1.3rem;
     color: $color-pink-primary;
   }
 
