--- a/client/src/components/Contacts/ContactItem/ContactItem.scss
+++ b/client/src/components/Contacts/ContactItem/ContactItem.scss
@@ -26,19 +26,19 @@
   &__name-avatar--holder {
     display: flex;
     align-items: center;
-    gap: 0.8rem;
-    margin-bottom: 1.2rem;
+    gap: 0.6rem;
+    margin-bottom: 1rem;
   }
 
   &__avatar {
-    width: 3.5rem;
-    height: 3.5rem;
+    width: 3.2rem;
+    height: 3.2rem;
     border-radius: 50%;
   }
 
   &__name {
-    font-size: 2.3rem;
-    font-weight: $font-semibold;
+    font-size: 2rem;
+    font-weight: $font-medium;
     color: $color-pink-primary;
   }
 
