worked on toast notfication and error handling

--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -29,6 +29,8 @@ $color-gray-dark-2: #adb5bd;
 $color-gray-light: #ced4da;
 $color-gray-light-extra: #f1f3f5;
 
+$color-green-success: #40c057;
+
 $color-red-deep: #e03131;
 $color-red-medium: #fa5252;
 $color-red-light: #ffe3e3;
