implemented contact delete functionality with modal

--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -26,6 +26,7 @@ $color-pink-light-extra: #ffdeeb;
 
 $color-gray-dark: #495057;
 $color-gray-dark-2: #adb5bd;
+$color-gray-dark-3: #868e96;
 $color-gray-light: #ced4da;
 $color-gray-light-extra: #f1f3f5;
 
@@ -47,4 +48,5 @@ $font-bold: 700;
 
 // Other Variables
 $border-radius-5px: 5px;
-$box-shadow-1: 1px 1px 2px rgba(0, 0, 0, 0.2); ;
+$box-shadow-1: 1px 1px 2px rgba(0, 0, 0, 0.2);
+$box-shadow-2: 1px 2px 5px rgba(0, 0, 0, 0.1); ;
