--- a/client/src/utils/ConfirmModal/ConfirmModal.scss
+++ b/client/src/utils/ConfirmModal/ConfirmModal.scss
@@ -5,7 +5,7 @@
     position: fixed;
     top: 30vh;
     left: 50%;
-    padding: 2rem 4rem;
+    padding: 3rem 4rem;
     border-radius: $border-radius-5px;
     transform: translate(-50%);
     z-index: 100;
@@ -41,8 +41,8 @@
   }
 
   &__message {
-    font-size: 1.35rem;
-    font-weight: $font-medium;
+    font-size: 1.3rem;
+    font-weight: $font-regular;
     color: $color-gray-dark;
   }
 
