implemented auth page and started for functionalities

--- a/client/src/components/FormElements/Input/Input.scss
+++ b/client/src/components/FormElements/Input/Input.scss
@@ -28,6 +28,10 @@
     font-size: 1.6rem;
   }
 
+  &__box input::placeholder {
+    font-size: 1.3rem;
+  }
+
   &__box input:focus {
     outline: none;
 
