--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -40,6 +40,7 @@ $color-white: #fff;
 $color-black: #222;
 
 // Font Variables
+$font-family-poppins: 'Poppins', sans-serif;
 $font-light: 300;
 $font-regular: 400;
 $font-medium: 500;
