--- a/client/src/components/FormElements/AddContactForm/AddContactForm.scss
+++ b/client/src/components/FormElements/AddContactForm/AddContactForm.scss
@@ -39,6 +39,7 @@
     grid-column: 2/-1;
     margin-top: 2rem;
     justify-self: end;
+    font-weight: $font-semibold;
   }
 
   &__save--btn:disabled,
