--- a/client/src/components/Header/Header.scss
+++ b/client/src/components/Header/Header.scss
@@ -5,7 +5,9 @@
   justify-content: space-between;
   align-items: center;
   background-color: $color-gray-dark;
-  padding: 1.8rem 8rem 1.8rem 2rem;
+  padding-right: 8rem;
+  padding-left: 2rem;
+  height: 6rem;
 
   &__logo {
     font-size: 2rem;
