--- a/client/src/components/Header/MainNavigation/MainNavigation.scss
+++ b/client/src/components/Header/MainNavigation/MainNavigation.scss
@@ -18,4 +18,20 @@
   // &__link:hover,
   // &__link:active {
   // }
+
+  &__list--item {
+    display: flex;
+    align-items: center;
+  }
+
+  &__btn--logout {
+    font-family: $font-family-poppins;
+    border: none;
+    background: none;
+    font-size: 1.6rem;
+    color: $color-white;
+    padding: 0 2rem;
+    border: 1px solid $color-white;
+    cursor: pointer;
+  }
 }
