fixed style of toastify

--- a/client/src/utils/ToastBar/ToastBar.scss
+++ b/client/src/utils/ToastBar/ToastBar.scss
@@ -1,50 +1,8 @@
 @import '../../index.scss';
 
-.toast-bar {
-  &__container {
-    position: fixed;
-    border-radius: $border-radius-5px;
-    top: 3rem;
-    left: 50%;
-    transform: translate(-50%);
-    padding: 2rem 4rem;
-  }
-
-  &__error {
-    background-color: $color-red-medium;
-    display: flex;
-    align-items: center;
-    gap: 1rem;
-  }
-
-  &__error--icon {
-    font-size: 1.6rem;
-    color: $color-black;
-    margin-bottom: 0.09rem;
-  }
-
-  &__error--text {
-    font-size: 1.2rem;
-    font-weight: $font-medium;
-    color: $color-black;
-  }
-
-  &__success {
-    background-color: $color-green-success;
-    display: flex;
-    align-items: center;
-    gap: 1rem;
-  }
-
-  &__success--icon {
-    font-size: 1.6rem;
-    color: $color-white;
-    margin-bottom: 0.09rem;
-  }
-
-  &__success--text {
-    font-size: 1.2rem;
-    font-weight: $font-medium;
-    color: $color-white;
-  }
+.Toastify__toast {
+  font-family: $font-family-poppins;
+  font-size: 1.15rem;
+  font-weight: $font-medium !important;
+  color: #666;
 }
